--- a/sgnup.html
+++ b/sgnup.html
@@ -19,7 +19,9 @@
                         <h2>Sign Up</h2>
                         <input type="text" name="username" placeholder="First name"><br><br>
                         <input type="text" name="username" placeholder="Last name"><br><br>
-                        <input type="date" style="width:182px; border: none;" placeholder="Date of Birth"><hr style="width:240px; margin:auto !important;color: #111 !important;" /><br>
+                        <p class = "date-text">Date Of Birth</p>
+                        <input type="date" style="width:182px; border: none;" placeholder="Date of Birth" value="2020-07-24"
+                        min="1900-01-01" max="2014-12-31"><hr style="width:240px; margin:auto !important;color: #111 !important;" /><br>
                         <input type="text" name="pass" placeholder="Username"><br><br>    
                         <input type="password" name="pass" placeholder="Password"><br><br>   
                         <input type="tel" placeholder="Phone Number"><br><br>  
