--- a/sgnup.html
+++ b/sgnup.html
@@ -13,6 +13,7 @@
         <div class="limiter">
             <div class="container-login">
                 <div class="wrap-login">
+                    <div class="form">
                     <form class="login-form">
                         <img class="logo"src="Images/YaarMe-Logo.jpg" alt="YaarMe-Logo"><br>
                         <h1><span style="color:#1676B3">YAAR</span>ME</h1>
@@ -37,6 +38,7 @@
                        </script>
                         Already have account?<a href="index.html">&nbsp;Log In</a>
                     </form>
+                    </div>
                     <div class="login-more" style="background-image: url('Images/friends4.jpg');">
                     </div>
                 </div>
