--- a/index.html
+++ b/index.html
@@ -1,43 +1,71 @@
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>YaarMe | Log In</title>
-<link href="sgnup.css" rel="stylesheet" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-</head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>YaarMe | Log In</title>
+    <link href="sgnup.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Play"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  </head>
 
-<body style="background-color: #666666;">
-
+  <body style="background-color: #666666;">
     <div class="limiter">
-        <div class="container-login">
-            <div class="wrap-login">
+      <div class="container-login">
+        <div class="wrap-login">
+          <div class="form">
+            <form class="login-form">
+              <img
+                class="logo"
+                src="Images/YaarMe-Logo.jpg"
+                alt="YaarMe-Logo"
+              /><br />
+              <h1><span style="color: #1676b3;">YAAR</span>ME</h1>
+              <h2>Log In</h2>
+              <input
+                type="text"
+                name="username"
+                placeholder="Username"
+              /><br /><br />
+              <input
+                type="password"
+                name="password"
+                placeholder="Password"
+              /><br /><br />
+              <a href="cong.html"><input type="button" value="Log In" /></a
+              ><br /><br />
+              <div id="container">
+                <a
+                  href="re.html"
+                  style="
+                    margin-right: 0px;
+                    font-size: 13px;
+                    font-family: Tahoma, Geneva, sans-serif;
+                  "
+                  >Reset password?</a
+                >
+                <a
+                  href="for.html"
+                  style="
+                    margin-left: 30px;
+                    font-size: 13px;
+                    font-family: Tahoma, Geneva, sans-serif;
+                  "
+                  >Forget password</a
+                >
+              </div>
+              <br /><br /><br /><br /><br /><br />
+              Don't have account?<a href="sgnup.html">&nbsp;Sign Up</a>
+            </form>
+          </div>
 
-                <form class="login-form">
-                    <img class="logo"src="Images/YaarMe-Logo.jpg" alt="YaarMe-Logo"><br>
-                    <h1><span style="color:#1676B3">YAAR</span>ME</h1>
-                    <h2>Log In</h2>
-                    <input type="text" name="username" placeholder="Username"/><br /><br />
-                    <input type="password" name="password" placeholder="Password" /><br /><br />
-                    <a href="cong.html"><input type="button" value="Log In" /></a><br /><br />
-                    <div id="container">
-                    <a href="re.html" style=" margin-right:0px; font-size:13px; font-family:Tahoma, Geneva, sans-serif;">Reset password?</a>
-                        <a href="for.html" style=" margin-left:30px; font-size:13px; font-family:Tahoma, Geneva, sans-serif;">Forget password</a>
-                        </div><br /><br /><br /><br /><br /><br />
-                    Don't have account?<a href="sgnup.html">&nbsp;Sign Up</a>
-                    
-                </form>
-
-
-
-                    
-                <div class="login-more" style="background-image: url('Images/friends2.jpg');">
-                </div>
-            </div>
+          <div
+            class="login-more"
+            style="background-image: url('Images/friends2.jpg');"
+          ></div>
         </div>
+      </div>
     </div>
-  
-
-
-</body>
+  </body>
 </html>
